<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="wrap_content"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="@color/grey">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="0px"
        android:background="@color/dark_skyblue"
        android:gravity="center"
        android:text="Sukarma Charitable Trust"
        android:textColor="@color/black"
        android:textSize="25sp"
        android:textStyle="bold"
        tools:context=".NGO1"
        tools:ignore="HardcodedText" />

    <!--    715 if you remove sticky text view then height will be 742-->

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="720dp"
        android:orientation="vertical">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            tools:context=".NGO1">




            <androidx.cardview.widget.CardView
                android:layout_width="wrap_content"
                android:layout_height="313dp"
                android:layout_margin="20dp"

                app:cardCornerRadius="20dp">

                <ImageView
                    android:id="@+id/imageView"
                    android:layout_width="fill_parent"
                    android:layout_height="match_parent"
                    android:layout_alignParentStart="true"
                    android:layout_alignParentLeft="true"
                    android:layout_alignParentTop="true"
                    android:layout_margin="10dp"
                    android:scaleType="centerCrop"
                    android:src="@drawable/sukarma_ngo_inner_image" />

            </androidx.cardview.widget.CardView>

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="10dp"
                android:gravity="center"
                android:text="The Sukarma Story"
                android:textSize="20sp"
                android:textStyle="bold"
                android:textColor="@color/black"
                tools:ignore="HardcodedText" />

            <TextView
                android:id="@+id/textView1"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="10dp"
                android:gravity="center"
                android:textColor="@color/black"
                android:textSize="14sp"
                android:text="@string/NGO1_info"
                tools:ignore="HardcodedText" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_margin="10dp"
                android:text="Our Services"
                android:textColor="@color/black"
                android:textSize="16sp"
                android:textStyle="bold" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center|start"
                android:layout_margin="10dp"
                android:textColor="@color/black"
                android:textSize="14sp"
                android:text="@string/sukarma_services" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_margin="10dp"
                android:text="How to provide help to children?"
                android:textSize="20sp"
                android:textColor="@color/black"
                android:textStyle="bold"/>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_margin="10dp"
                android:textColor="@color/black"
                android:textSize="14sp"
                android:text="@string/akshaya_help" />


            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_margin="10dp"
                android:text="How can help you"
                android:textSize="20sp"
                android:textColor="@color/black"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/textVie"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="10dp"
                android:gravity="center|start"
                android:textColor="@color/black"
                android:textSize="14sp"
                android:text="@string/sukarma_help"
                tools:ignore="HardcodedText" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_margin="10dp"
                android:text="Contact Us"
                android:textSize="20sp"
                android:textColor="@color/black"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/textView"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="10dp"
                android:gravity="center|start"
                android:textColor="@color/black"
                android:textSize="14sp"
                android:text="@string/sukarma_contact"
                tools:ignore="HardcodedText" />

        </LinearLayout>
    </ScrollView>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="44dp">

        <Button
            android:id="@+id/button3"
            android:layout_width="200dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center"

            android:layout_marginBottom="4dp"
            android:backgroundTint="@color/red"
            android:onClick="donate"
            android:text="Donate now"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.497"
            app:layout_constraintStart_toStartOf="parent"
            tools:ignore="HardcodedText" />

    </androidx.constraintlayout.widget.ConstraintLayout>
</LinearLayout>